--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ repositories {
         name 'CraftTweaker/Reskillable'
         url 'http://maven.blamejared.com'
     }
+    maven {
+        name 'Darkhax'
+        url 'https://maven.mcmoddev.com/'
+    }
     maven{
         name 'JEI'
         url 'http://dvs1.progwml6.com/files/maven'
@@ -48,12 +52,12 @@ repositories {
 }
 
 dependencies {
+    deobfCompile "net.darkhax.gamestages:GameStages-1.12.2:2.0.87"
+    deobfCompile "net.darkhax.bookshelf:Bookshelf-1.12.2:2.3.544"
     deobfCompile "codersafterdark.reskillable:Reskillable:1.12.2-1.6.0-SNAPSHOT.68"
     deobfCompile "MCMultiPart2:MCMultiPart:2.5.1"
     deobfCompile "betterwithmods:BetterWithMods:1.12-2.1.9-486"
     deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-${crafttweaker_version}"
-    deobfCompile "CraftTweaker2:CraftTweaker2-API:1.12-${crafttweaker_version}"
-    deobfCompile "CraftTweaker2:ZenScript:1.12-${crafttweaker_version}"
     deobfCompile "mcp.mobius.waila:Hwyla:${hwyla_version}"
     deobfCompile "mezz.jei:jei_1.12.2:4.8.5.144"
     deobfCompile "slimeknights:TConstruct:${minecraft_version}-${tinkers_version}"
